# sparkify-airflow

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
dags/: final_project.py  sparkify_etl.py
infra/: main.tf  networking.tf
infra/modules/eks/: output.tf  sparkify_eks_cluster.tf  sparkify_node_group.tf  variables.tf
infra/modules/iam/: output.tf  sparkify-redshift-role.tf  sparkify_eks_cluster_role.tf  sparkify_node_group_role.tf  variables.tf
infra/modules/redshift/: output.tf  sparkify-redshift.tf  variables.tf
infra/modules/s3/: output.tf  sparkify.tf
plugins/operators/: data_quality.py  load_dimension.py  load_fact.py  stage_redshift.py
