[tool.poetry]
name = "sparkify-airflow"
version = "0.1.0"
description = ""
authors = ["regokan <regokan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
apache-airflow = "^2.10.2"
apache-airflow-providers-postgres = {extras = ["amazon"], version = "^5.13.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
